# Ultra-NeRF

./: README.md  convert_convex_dataset.py  main.py  pyproject.toml  render_demo_us.py  run_training_gui.py  run_ultranerf.py  run_visualize_sweeps.py
configs/: README.md  config_abdominal_phantom_convex.txt  config_abdominal_phantom_convex_highres.txt  config_abdominal_phantom_convex_mip.txt  config_abdominal_phantom_convex_mip_v4.txt  config_base_nerf.txt  config_convex_example.txt  config_convex_mip_example.txt
docs/: CONVEX_MIP_SUPPORT.md  CONVEX_SUPPORT.md  GUI_TRAINING_WORKFLOW.md  TRAINING_AND_VIEWER_RECIPES.md  TRAINING_CLI.md  TRAINING_CONFIG.md  VISUALIZER_OVERVIEW.md  VISUALIZER_WORKFLOW.md
tests/: test_convex_dataset_conversion.py  test_convex_mip.py  test_multi_sweep_app.py  test_multi_sweep_napari_ui.py  test_nerf_session.py  test_probe_geometry.py  test_probe_representation.py  test_run_training_gui.py  test_sweep_volume.py  test_training_config.py  test_training_dataset.py  test_training_gui.py  test_trajectory.py  test_visualization_transforms.py
tickets/: T36-define-convex-probe-geometry-contract.md  T37-add-convex-probe-configuration-and-cli-support.md  T38-add-convex-ray-generation-for-training-and-inference.md  T39-integrate-convex-rendering-layout-into-the-active-renderer.md  T40-add-convex-pixel-to-world-mapping-for-visualization-and-fusion.md  T41-add-convex-probe-representation-to-the-visualizer.md  T42-add-convex-dataset-and-viewer-workflow-support.md  T43-add-convex-regression-tests-and-documentation.md  convex_support_checklist.md  list.md  (+14 more)
(+22 files in other folders)
