[project]
name = "ultranerf-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configargparse>=1.7.5",
    "imageio>=2.37.3",
    "matplotlib>=3.11.0",
    "monai>=1.5.2",
    "ptwt>=1.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]
